Add feature. Now creating customers is possible
